--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.3",
     "@types/react-dom": "18.2.3",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "next": "13.3.4",
     "react": "18.2.0",
